--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,17 +1,19 @@
+version: '3.9'
+
 services:
 
   sqlserver:
     image: mcr.microsoft.com/mssql/server:2022-latest
     container_name: casadosfarelos-sql
     environment:
-      SA_PASSWORD: "Gbsft@7K10"
+      SA_PASSWORD: "${SA_PASSWORD}"
       ACCEPT_EULA: "Y"
     ports:
       - "1433:1433"
     volumes:
       - sql_data:/var/opt/mssql
     healthcheck:
-      test: /opt/mssql-tools18/bin/sqlcmd -S localhost -U sa -P Gbsft@7K10 -Q "SELECT 1"
+      test: /opt/mssql-tools18/bin/sqlcmd -S localhost -U sa -P "${SA_PASSWORD}" -Q "SELECT 1"
       interval: 10s
       timeout: 5s
       retries: 15
@@ -29,7 +31,7 @@ services:
       dockerfile: src/GBastos.Casa_dos_Farelos.Api/Dockerfile
     environment:
       ASPNETCORE_ENVIRONMENT: Development
-      ConnectionStrings__Conn: "Server=sqlserver,1433;Database=CasaDosFarelos;User Id=sa;Password=Gbsft@7K10;TrustServerCertificate=True"
+      ConnectionStrings__Conn: "${DB_CONNECTION}"
       Redis__Connection: "redis:6379"
     ports:
       - "8080:8080"
