--- a/src/GBastos.Casa_dos_Farelos.Api/appsettings.Development.json
+++ b/src/GBastos.Casa_dos_Farelos.Api/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqlServer": "Server=localhost,1433;Database=CasaDosFarelos;User Id=sa;Password=Gbsft@7K10;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
