--- a/src/GBastos.Casa_dos_Farelos.Api/appsettings.json
+++ b/src/GBastos.Casa_dos_Farelos.Api/appsettings.json
@@ -1,8 +1,8 @@
 {
   "ConnectionStrings": {
-    //"Conn": "Server=localhost,1434;Database=CasaDosFarelos;User Id=sa;Password=Gbsft@7K10;TrustServerCertificate=True",
-    //"Conn": "Server=sqlserver;Database=CasaDosFarelos;User Id=sa;Password=Gbsft@7K10;TrustServerCertificate=True",
-    "Conn": "Server=sqlserver,1433;Database=CasaDosFarelos;User Id=sa;Password=Gbsft@7K10;TrustServerCertificate=True"
+    "Database": "CasaDosFarelos",
+    "Server": "sqlserver,1433",
+    "User": "sa"
   },
 
   "Redis": {
