--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,31 +1,26 @@
-version: '3.9'
-
 services:
 
   sqlserver:
     image: mcr.microsoft.com/mssql/server:2022-latest
-    container_name: casadosfarelos-sql
     environment:
       SA_PASSWORD: "${SA_PASSWORD}"
       ACCEPT_EULA: "Y"
     ports:
-      - "1433:1433"
+      - "14330:1433"
     volumes:
       - sql_data:/var/opt/mssql
     healthcheck:
       test: /opt/mssql-tools18/bin/sqlcmd -S localhost -U sa -P "${SA_PASSWORD}" -Q "SELECT 1"
       interval: 10s
       timeout: 5s
-      retries: 15
+      retries: 10
 
   redis:
     image: redis:7-alpine
-    container_name: casadosfarelos-redis
     ports:
       - "6379:6379"
 
   api:
-    container_name: casa_dos_farelos_api
     build:
       context: ..
       dockerfile: src/GBastos.Casa_dos_Farelos.Api/Dockerfile
@@ -43,3 +38,6 @@ services:
 
 volumes:
   sql_data:
+  
+  
+  # docker compose up -d
