--- a/src/GBastos.Casa_dos_Farelos.Api/appsettings.json
+++ b/src/GBastos.Casa_dos_Farelos.Api/appsettings.json
@@ -6,7 +6,8 @@
   },
 
   "Redis": {
-    "Connection": "localhost:6379"
+ // "Connection": "localhost:6379",
+    "Connection": "redis:6379"
   },
   "Jwt": {
     "Key": "",
