--- a/src/GBastos.Casa_dos_Farelos.Domain/GBastos.Casa_dos_Farelos.Domain.csproj
+++ b/src/GBastos.Casa_dos_Farelos.Domain/GBastos.Casa_dos_Farelos.Domain.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="MediatR" Version="14.0.0" />
   </ItemGroup>
 
   <ItemGroup>
