--- a/src/GBastos.Casa_dos_Farelos.Api/appsettings.json
+++ b/src/GBastos.Casa_dos_Farelos.Api/appsettings.json
@@ -1,12 +1,18 @@
 {
-  "ConnectionStrings": {
-    "Database": "CasaDosFarelos",
-    "Server": "sqlserver,1433",
-    "User": "sa"
+  {
+    "ConnectionStrings": {
+      "Conn": "Server=localhost,1433;Data Source=KILLWANGY;Initial Catalog=CasaDosFarelos;Integrated Security=True;TrustServerCertificate=True"
+    }
   },
 
+  //"ConnectionStrings": {
+  //  "Database": "CasaDosFarelos",
+  //  "Server": "sqlserver,1433",
+  //  "User": "sa"
+  //},
+
   "Redis": {
- // "Connection": "localhost:6379",
+    // "Connection": "localhost:6379",
     "Connection": "redis:6379"
   },
   "Jwt": {
