--- a/src/GBastos.Casa_dos_Farelos.Application/GBastos.Casa_dos_Farelos.Application.csproj
+++ b/src/GBastos.Casa_dos_Farelos.Application/GBastos.Casa_dos_Farelos.Application.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Commands\Fornecedores\" />
     <Folder Include="Queries\Fornecedores\Handlers\" />
   </ItemGroup>
 
