Faltou o override no SaveChangesAsync do AppDbContext

--- a/src/GBastos.Casa_dos_Farelos.Api/appsettings.json
+++ b/src/GBastos.Casa_dos_Farelos.Api/appsettings.json
@@ -1,18 +1,8 @@
 {
-  {
-    "ConnectionStrings": {
-      "Conn": "Server=localhost,1433;Data Source=KILLWANGY;Initial Catalog=CasaDosFarelos;Integrated Security=True;TrustServerCertificate=True"
-    }
+  "ConnectionStrings": {
+    "Conn": "Server=localhost,1433;Database=CasaDosFarelos;User Id=sa;Password=SuaSenha;TrustServerCertificate=True"
   },
-
-  //"ConnectionStrings": {
-  //  "Database": "CasaDosFarelos",
-  //  "Server": "sqlserver,1433",
-  //  "User": "sa"
-  //},
-
   "Redis": {
-    // "Connection": "localhost:6379",
     "Connection": "redis:6379"
   },
   "Jwt": {
@@ -29,3 +19,28 @@
   },
   "AllowedHosts": "*"
 }
+
+//{
+//    "ConnectionStrings": {
+//      "Database": "CasaDosFarelos",
+//      "Server": "sqlserver,1433",
+//      "User": "sa"
+//    },
+//    "Redis": {
+//      // "Connection": "localhost:6379",
+//      "Connection": "redis:6379"
+//    },
+//    "Jwt": {
+//      "Key": "",
+//      "Issuer": "CasaDosFarelos",
+//      "Audience": "CasaDosFarelosClient",
+//      "ExpirationHours": 8
+//    },
+//    "Logging": {
+//      "LogLevel": {
+//        "Default": "Information",
+//        "Microsoft.AspNetCore": "Warning"
+//      }
+//    },
+//    "AllowedHosts": "*"
+//}
