Mudança de senha

--- a/src/GBastos.Casa_dos_Farelos.Api/appsettings.Development.json
+++ b/src/GBastos.Casa_dos_Farelos.Api/appsettings.Development.json
@@ -1,11 +1,13 @@
 {
   "ConnectionStrings": {
-    "SqlServer": "Server=localhost,1433;Database=CasaDosFarelos;User Id=sa;Password=Gbsft@7K10;TrustServerCertificate=True"
+    "SqlServer": "Server=localhost,1433;Database=CasaDosFarelos;User Id=sa;Password=CasaDosFarelos@2026!;TrustServerCertificate=True"
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+
+  "Redis": {
+    "Connection": "localhost:6379"
+  },
+
+  "Jwt": {
+    "Key": "DEV_SUPER_SECRET_KEY_123456789"
   }
 }
