--- a/src/GBastos.Casa_dos_Farelos.Api/appsettings.json
+++ b/src/GBastos.Casa_dos_Farelos.Api/appsettings.json
@@ -1,46 +1,25 @@
 {
   "ConnectionStrings": {
-    "Conn": "Server=localhost,1433;Database=CasaDosFarelos;User Id=sa;Password=SuaSenha;TrustServerCertificate=True"
+    "SqlServer": ""
   },
+
   "Redis": {
-    "Connection": "redis:6379"
+    "Connection": ""
   },
+
   "Jwt": {
     "Key": "",
     "Issuer": "CasaDosFarelos",
     "Audience": "CasaDosFarelosClient",
     "ExpirationHours": 8
   },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
   "AllowedHosts": "*"
 }
-
-//{
-//    "ConnectionStrings": {
-//      "Database": "CasaDosFarelos",
-//      "Server": "sqlserver,1433",
-//      "User": "sa"
-//    },
-//    "Redis": {
-//      // "Connection": "localhost:6379",
-//      "Connection": "redis:6379"
-//    },
-//    "Jwt": {
-//      "Key": "",
-//      "Issuer": "CasaDosFarelos",
-//      "Audience": "CasaDosFarelosClient",
-//      "ExpirationHours": 8
-//    },
-//    "Logging": {
-//      "LogLevel": {
-//        "Default": "Information",
-//        "Microsoft.AspNetCore": "Warning"
-//      }
-//    },
-//    "AllowedHosts": "*"
-//}
