Acerto no appsettings.dev

--- a/src/GBastos.Casa_dos_Farelos.Api/appsettings.Development.json
+++ b/src/GBastos.Casa_dos_Farelos.Api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlServer": "Server=localhost,1433;Database=CasaDosFarelos;User Id=sa;Password=CasaDosFarelos@2026!;TrustServerCertificate=True"
+    "SqlServer": "Server=localhost,1433;Database=CasaDosFarelos;User Id=sa;Password=Gbsft@7K10;TrustServerCertificate=True"
   },
 
   "Redis": {
