Acertos diversos e limpeza de código

--- a/src/GBastos.Casa_dos_Farelos.Application/GBastos.Casa_dos_Farelos.Application.csproj
+++ b/src/GBastos.Casa_dos_Farelos.Application/GBastos.Casa_dos_Farelos.Application.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Commands\Compras\EventHandlers\**" />
+    <EmbeddedResource Remove="Commands\Compras\EventHandlers\**" />
+    <None Remove="Commands\Compras\EventHandlers\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="FluentValidation" Version="12.1.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.11.0" />
@@ -16,10 +22,6 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.12" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.15.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.15.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Commands\Compras\EventHandlers\" />
   </ItemGroup>
 
   <ItemGroup>
