--- a/src/GBastos.Casa_dos_Farelos.Infrastructure/GBastos.Casa_dos_Farelos.Infrastructure.csproj
+++ b/src/GBastos.Casa_dos_Farelos.Infrastructure/GBastos.Casa_dos_Farelos.Infrastructure.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="10.0.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.12" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.12" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="RabbitMQ.Client" Version="7.2.0" />
     <PackageReference Include="Scrutor" Version="7.0.0" />
     <PackageReference Include="StackExchange.Redis" Version="2.10.14" />
   </ItemGroup>
