--- a/src/GBastos.Casa_dos_Farelos.Application/GBastos.Casa_dos_Farelos.Application.csproj
+++ b/src/GBastos.Casa_dos_Farelos.Application/GBastos.Casa_dos_Farelos.Application.csproj
@@ -16,7 +16,7 @@
     <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="FluentValidation" Version="12.1.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.11.0" />
-    <PackageReference Include="MediatR" Version="14.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.12" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.12" />
