--- a/src/GBastos.Casa_dos_Farelos.Domain/GBastos.Casa_dos_Farelos.Domain.csproj
+++ b/src/GBastos.Casa_dos_Farelos.Domain/GBastos.Casa_dos_Farelos.Domain.csproj
@@ -18,7 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
-    <PackageReference Include="MediatR" Version="14.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
   </ItemGroup>
 
   <ItemGroup>
