--- a/src/GBastos.Casa_dos_Farelos.Shared/GBastos.Casa_dos_Farelos.Shared.csproj
+++ b/src/GBastos.Casa_dos_Farelos.Shared/GBastos.Casa_dos_Farelos.Shared.csproj
@@ -13,7 +13,7 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.11.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.11.0" />
-    <PackageReference Include="MediatR" Version="13.1.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.12" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.12" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.12" />
