--- a/src/GBastos.Casa_dos_Farelos.Api/GBastos.Casa_dos_Farelos.Api.csproj
+++ b/src/GBastos.Casa_dos_Farelos.Api/GBastos.Casa_dos_Farelos.Api.csproj
@@ -19,6 +19,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.OpenApi" Version="1.6.14" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
+    <PackageReference Include="RabbitMQ.Client" Version="7.2.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
