--- a/src/Services/EstoqueService/GBastos.Casa_dos_Farelos.EstoqueService.Api/Properties/launchSettings.json
+++ b/src/Services/EstoqueService/GBastos.Casa_dos_Farelos.EstoqueService.Api/Properties/launchSettings.json
@@ -4,8 +4,8 @@
     "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
-      "applicationUrl": "http://localhost:5201",
+      "launchBrowser": true,
+      "applicationUrl": "http://localhost:5155",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -13,8 +13,8 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
-      "applicationUrl": "https://localhost:7190;http://localhost:5201",
+      "launchBrowser": true,
+      "applicationUrl": "https://localhost:7135;http://localhost:5155",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
